fix: fix section2 flow
section2's items are overflowing on the Edge browser when the width is reduced... attempting to solve problem

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ figure {
 .section2 {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    height: auto;
     background-color: rgb(212, 219, 211);
     padding: 30px;
     margin-right: 0;
